# rstml-component

./: .kodiak.toml  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml  release-please-config.json  renovate.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release-please.yml  relesae-plz.yml
integrations/axum/: CHANGELOG.md  Cargo.toml  README.md
integrations/axum/examples/: simple.rs
integrations/axum/src/: lib.rs
macro/: CHANGELOG.md  Cargo.toml  README.md
macro/src/: component.rs  func.rs  lib.rs  template.rs  utils.rs  write.rs
macro/src/template/: ide.rs  parsing.rs
macro/tests/: component.rs
src/: builtins.rs  component.rs  fmt.rs  lib.rs  sanitize.rs
src/fmt/: escape.rs
tests/: builtins.rs  func.rs  utils.rs  write_html.rs
