[package]
name = "rstml-component"
version = "0.2.1"
edition = "2021"
description = "HTML Component Library for Rust"
license.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
rstml-component-macro = { version = "0.2.0", path = "macro" }
ammonia = { version = "3", optional = true }

[features]
sanitize = ["dep:ammonia"]

[workspace]
members = ["macro", "integrations/axum"]
package.license = "MIT"
package.repository = "https://github.com/YoloDev/rstml-component"
