[package]
name = "rstml-component-macro"
version = "0.2.2"
edition = "2021"
description = "Macros for rstml-component"
license.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
convert_case = "0.6"
indexmap = "2"
proc-macro2 = "1.0.81"
proc-macro2-diagnostics = "0.10.1"
quote = "1.0.36"
rstml = { version = "0.11", default-features = false }
syn = "2.0.60"

[dev-dependencies]
rstml-component = { path = "../" }
