[package]
name = "rstml-component-macro"
version = "0.2.5"
edition = "2021"
description = "Macros for rstml-component"
license.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
convert_case = { workspace = true }
indexmap = { workspace = true }
proc-macro2 = { workspace = true }
proc-macro2-diagnostics = { workspace = true }
quote = { workspace = true }
rstml = { workspace = true }
syn = { workspace = true }

[dev-dependencies]
rstml-component = { path = "../" }
