[package]
name = "rstml-component-axum"
version = "0.2.5"
edition = "2021"
description = "Integration with rstml-component for Axum"
license.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
axum-extra = { version = "0.9", features = ["typed-header"] }
rstml-component = { version = "0.2.1", path = "../../" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[features]
sanitize = ["rstml-component/sanitize"]
