[package]
name = "rstml-component-axum"
version = "0.2.9"
edition = "2021"
description = "Integration with rstml-component for Axum"
license.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true }
axum-extra = { workspace = true, features = ["typed-header"] }
rstml-component = { version = "0.2.5", path = "../../" }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[features]
sanitize = ["rstml-component/sanitize"]
